[b]0.47beta[/b] (Apr 10, 2014)

*Layout fix on hide/show chat datatexts.

*Added RareCoordinator in BenikUI style. Minor changes in S&L styling.

*Fixed a lua error when the threat bar was set in left chat. Also fixed the threat bar behaviour when default ElvUI chat datatexts are enabled.
TODO: Auras status bars; ain't working as intended.



[b]0.46beta[/b] (Apr 9, 2014)

*Made BenikUI layout a seperate module.

*Different (more efficient) approach on hide/show chat datatexts.



[b]0.45beta[/b] (Apr 8, 2014)

*Fixed the detached portraits strata. They should now overlap the player and target frame.

*Fixed the xp/rep text format not changing cause were calling ElvUI's text format option. Added an option in BenikUI.

*BenikUI chat datatexts will hide when default ElvUI ones are shown. (needs a moar testing.. going to bed)

*Updated locales.

*Added the logo at the options. Probably I will remove it.. dunno yet

*Added a couple of frames not styled.



[b]0.44beta[/b] (Apr 6, 2014)

*Reworked the xp and rep on PlayerBar. This time it's perfectofinal :P

*Cleanup.



[b]0.43beta[/b] (Apr 4, 2014)

*BenikUI style in Shadow & Light edit.

*Detached Portraits at last! (Big thanks to Blazeflack).

*Added an option to make the non overlayed portraits transparent (detached or not).

*Removed the XP & Rep "Hide Text" option on the PlayerBar. Way too many checks with minimal result. Hiding the text can still be done in ElvUI General options.

*Applied a small fix for Skada style (Thanks Azilroka).

*Renamed the Mail datatext to BuiMail, so it doesn't conflict or show as duplicate, if another addon adds a similar datatext.

[b]0.42beta
[/b] (Apr 2, 2014)

*Added 3 color themes plus the default ElvUI. 'Diablo' (dark red), 'Mists' (dark green), 'Hearthstone' (dark blue). Available in BenikUI options or in the install (step 3).

*Added AtlasLoot, Altoholic styled skin.

*Changed Tooltip statusbar texture.



[b]0.41beta[/b] (Mar 29, 2014)
